# bitforge

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/core/: EngineInstance.cpp  EngineInstance.h  instance.cpp  instance.h  logging.h  memory.h  string.cpp  string.h  subsystem.h  thread.cpp  thread.h  tracing.h  uniqueptr.h  vector.h  version.h
src/logging/: logger.cpp  logger.h  logging.h
src/renderer/: renderer.cpp  renderer.h
src/timer/: timer.cpp  timer.h
tests/: uniqueptr.cpp
